auto publishing updates to notebooks

--- a/aiyagari_jax.ipynb
+++ b/aiyagari_jax.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0b2c47a3",
+   "id": "4be0812c",
    "metadata": {},
    "source": [
     "# The Aiyagari Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ff59d92",
+   "id": "ce7290d2",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "561ae81e",
+   "id": "0fa153aa",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6b86c0bc",
+   "id": "0c8778f4",
    "metadata": {},
    "source": [
     "### References\n",
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bf76778f",
+   "id": "56a0ffe2",
    "metadata": {},
    "source": [
     "### Preliminaries\n",
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "65e5d9e8",
+   "id": "0b4a9c04",
    "metadata": {
     "hide-output": false
    },
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dba654db",
+   "id": "d99ceb1b",
    "metadata": {},
    "source": [
     "Let’s check the GPU we are running"
@@ -100,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a463d0f8",
+   "id": "91be216a",
    "metadata": {
     "hide-output": false
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcf19d9c",
+   "id": "59c129a7",
    "metadata": {},
    "source": [
     "We will use 64 bit floats with JAX in order to increase the precision."
@@ -120,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "514aa611",
+   "id": "c455e355",
    "metadata": {
     "hide-output": false
    },
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd570d4a",
+   "id": "bcdba172",
    "metadata": {},
    "source": [
     "We will use the following function to compute stationary distributions of stochastic matrices.  (For a reference to the algorithm, see p. 88 of [Economic Dynamics](https://johnstachurski.net/edtc).)"
@@ -140,7 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78d02ca4",
+   "id": "87871f8b",
    "metadata": {
     "hide-output": false
    },
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d69f8acf",
+   "id": "52fa2b4f",
    "metadata": {},
    "source": [
     "## Firms\n",
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e4b6958b",
+   "id": "3f23fa68",
    "metadata": {
     "hide-output": false
    },
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8da25fb4",
+   "id": "72e3ad7a",
    "metadata": {},
    "source": [
     "From the first-order condition with respect to capital,\n",
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df1a6dcc",
+   "id": "653a1a31",
    "metadata": {
     "hide-output": false
    },
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4366ba8",
+   "id": "71b8af6c",
    "metadata": {},
    "source": [
     "Using [(18.1)](#equation-equation-aiy-rgk) and the firm’s first-order condition for labor,\n",
@@ -269,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df508559",
+   "id": "4167ae82",
    "metadata": {
     "hide-output": false
    },
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8aa2d458",
+   "id": "0d0d5d72",
    "metadata": {},
    "source": [
     "## Households\n",
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52142fef",
+   "id": "f71a71e5",
    "metadata": {},
    "source": [
     "### Primitives and Operators\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c684880",
+   "id": "76d23b04",
    "metadata": {
     "hide-output": false
    },
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d3ea0b5",
+   "id": "087f67e7",
    "metadata": {
     "hide-output": false
    },
@@ -388,7 +388,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ef194c9",
+   "id": "58f14b95",
    "metadata": {},
    "source": [
     "This is the vectorized version of the right-hand side of the Bellman equation\n",
@@ -404,7 +404,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6412763",
+   "id": "88197899",
    "metadata": {
     "hide-output": false
    },
@@ -435,7 +435,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dad60853",
+   "id": "85aba0f8",
    "metadata": {},
    "source": [
     "The next function computes greedy policies."
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a192eb7e",
+   "id": "bd6c4913",
    "metadata": {
     "hide-output": false
    },
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82718f3f",
+   "id": "ee5f7f1a",
    "metadata": {},
    "source": [
     "We need to know rewards at a given policy for policy iteration.\n",
@@ -477,7 +477,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30f7f7d0",
+   "id": "c69bf0d0",
    "metadata": {
     "hide-output": false
    },
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71698244",
+   "id": "4886691b",
    "metadata": {},
    "source": [
     "The value $ v_{\\sigma} $ of a policy $ \\sigma $ is defined as\n",
@@ -530,7 +530,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b84e4f3b",
+   "id": "964415c5",
    "metadata": {
     "hide-output": false
    },
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12974a35",
+   "id": "e3b39564",
    "metadata": {},
    "source": [
     "The next function computes the lifetime value of a given policy."
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bff9a4d9",
+   "id": "737f638a",
    "metadata": {
     "hide-output": false
    },
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2fbbf6fc",
+   "id": "8f7361c0",
    "metadata": {},
    "source": [
     "## Solvers\n",
@@ -600,7 +600,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c303171",
+   "id": "f82fb930",
    "metadata": {
     "hide-output": false
    },
@@ -633,7 +633,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7198511d",
+   "id": "5d0c2961",
    "metadata": {},
    "source": [
     "As a first example of what we can do, let’s compute and plot an optimal accumulation policy at fixed prices."
@@ -642,7 +642,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a8a1108",
+   "id": "75403a91",
    "metadata": {
     "hide-output": false
    },
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42f470bd",
+   "id": "d3610fb3",
    "metadata": {
     "hide-output": false
    },
@@ -672,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07de4d33",
+   "id": "d5e7e1f7",
    "metadata": {
     "hide-output": false
    },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaf161a6",
+   "id": "ef95704d",
    "metadata": {},
    "source": [
     "### Capital Supply\n",
@@ -713,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ecac987",
+   "id": "518b1da0",
    "metadata": {
     "hide-output": false
    },
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9e9aeb9",
+   "id": "4d48ca13",
    "metadata": {},
    "source": [
     "Let’s give this a test run."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3c9b48dd",
+   "id": "4a563d06",
    "metadata": {
     "hide-output": false
    },
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aaa5003d",
+   "id": "934ccf44",
    "metadata": {},
    "source": [
     "The distribution should sum to one:"
@@ -785,7 +785,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba88b13f",
+   "id": "28bf83e1",
    "metadata": {
     "hide-output": false
    },
@@ -796,7 +796,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9637e192",
+   "id": "83783816",
    "metadata": {},
    "source": [
     "Now we are ready to compute capital supply by households given wages and interest rates."
@@ -805,7 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0098e246",
+   "id": "4482a6ec",
    "metadata": {
     "hide-output": false
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e2e1c92",
+   "id": "e0b30f40",
    "metadata": {},
    "source": [
     "## Equilibrium\n",
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9ca84a6",
+   "id": "cb247f1a",
    "metadata": {},
    "source": [
     "### Visual inspection\n",
@@ -885,7 +885,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10630550",
+   "id": "2121c2f9",
    "metadata": {
     "hide-output": false
    },
@@ -903,7 +903,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "593bccc0",
+   "id": "b5d9fe92",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba3c99c6",
+   "id": "7bda5410",
    "metadata": {
     "hide-output": false
    },
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfaa764d",
+   "id": "6811856a",
    "metadata": {},
    "source": [
     "Here’s a plot of the excess demand function.\n",
@@ -953,7 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a9cda027",
+   "id": "5806ad38",
    "metadata": {
     "hide-output": false
    },
@@ -969,7 +969,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b11292",
+   "id": "9f393143",
    "metadata": {
     "hide-output": false
    },
@@ -985,7 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "296a1787",
+   "id": "0bb5b922",
    "metadata": {
     "hide-output": false
    },
@@ -1001,7 +1001,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c300262",
+   "id": "fe9b0801",
    "metadata": {},
    "source": [
     "### Computing the equilibrium\n",
@@ -1015,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36689ae3",
+   "id": "99cfb643",
    "metadata": {
     "hide-output": false
    },
@@ -1042,7 +1042,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e2485b6e",
+   "id": "3b083f08",
    "metadata": {},
    "source": [
     "Now we call the bisection function on excess demand."
@@ -1051,7 +1051,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c61971ff",
+   "id": "dc33af73",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7e23057a",
+   "id": "ec3ed6ff",
    "metadata": {
     "hide-output": false
    },
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fafeee81",
+   "id": "7f440acd",
    "metadata": {},
    "source": [
     "Notice how quickly we can compute the equilibrium capital stock using a simple\n",
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21f8b425",
+   "id": "2c9f9ddd",
    "metadata": {},
    "source": [
     "## Exercises"
@@ -1101,7 +1101,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "903a58de",
+   "id": "1aad2ec9",
    "metadata": {},
    "source": [
     "## Exercise 18.1\n",
@@ -1112,7 +1112,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "298782ff",
+   "id": "b2ef2dd3",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.1](https://jax.quantecon.org/#aygr_ex1)"
@@ -1121,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc4551b6",
+   "id": "9ef98c22",
    "metadata": {
     "hide-output": false
    },
@@ -1139,7 +1139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "956be7a0",
+   "id": "ab939bdf",
    "metadata": {
     "hide-output": false
    },
@@ -1154,7 +1154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "643eb502",
+   "id": "c12d0e1d",
    "metadata": {},
    "source": [
     "## Exercise 18.2\n",
@@ -1177,7 +1177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a83ce0e",
+   "id": "c08bad6f",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 18.2](https://jax.quantecon.org/#aygr_ex2)\n",
@@ -1188,7 +1188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a27ed8a",
+   "id": "1c72a4b0",
    "metadata": {
     "hide-output": false
    },
@@ -1200,7 +1200,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3508c589",
+   "id": "7fc7e1f4",
    "metadata": {},
    "source": [
     "We need to re-compile all the jitted functions in order notice the change\n",
@@ -1210,7 +1210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0123615",
+   "id": "09ac2f0b",
    "metadata": {
     "hide-output": false
    },
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "571fa463",
+   "id": "128ebf85",
    "metadata": {},
    "source": [
     "Now, let’s plot the the demand for capital by firms"
@@ -1236,7 +1236,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "807cd3c3",
+   "id": "b64c9ccf",
    "metadata": {
     "hide-output": false
    },
@@ -1261,7 +1261,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c0d90071",
+   "id": "006a5eb0",
    "metadata": {
     "hide-output": false
    },
@@ -1281,7 +1281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5dea4b2e",
+   "id": "04f7f200",
    "metadata": {},
    "source": [
     "Compute the equilibrium"
@@ -1290,7 +1290,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc9231cb",
+   "id": "2896ba00",
    "metadata": {
     "hide-output": false
    },
@@ -1305,7 +1305,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141904.4026752,
+  "date": 1714699245.720087,
   "filename": "aiyagari_jax.md",
   "kernelspec": {
    "display_name": "Python",
