--- a/intro.ipynb
+++ b/intro.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0ee8a238",
+   "id": "2f88b21a",
    "metadata": {},
    "source": [
     "# Quantitative Economics with JAX\n",
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7bebb8",
+   "id": "31e7e34b",
    "metadata": {},
    "source": [
     "# Introduction\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b0b0769",
+   "id": "ed14c231",
    "metadata": {},
    "source": [
     "# Simulation\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "75e4434c",
+   "id": "38ff5e3f",
    "metadata": {},
    "source": [
     "# Asset Pricing\n",
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6977a63c",
+   "id": "dae38f9a",
    "metadata": {},
    "source": [
     "# Dynamic Programming\n",
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d877b7b",
+   "id": "bfe77bc1",
    "metadata": {},
    "source": [
     "# Macroeconomic Models\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3134248",
+   "id": "6892caec",
    "metadata": {},
    "source": [
     "# Data and Empirics\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eeb923d2",
+   "id": "810b6e9a",
    "metadata": {},
    "source": [
     "# Other\n",
@@ -100,7 +100,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141904.620055,
+  "date": 1714699245.9278283,
   "filename": "intro.md",
   "kernelspec": {
    "display_name": "Python",
