--- a/job_search.ipynb
+++ b/job_search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ce6f1117",
+   "id": "9230462e",
    "metadata": {},
    "source": [
     "# Job Search"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fa135ee4",
+   "id": "a87370a7",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -33,7 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ddf694c",
+   "id": "24903dd7",
    "metadata": {
     "hide-output": false
    },
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19af1a2f",
+   "id": "bf76d0f9",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9e38467",
+   "id": "a4785d11",
    "metadata": {
     "hide-output": false
    },
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "453328f9",
+   "id": "fa86ab96",
    "metadata": {},
    "source": [
     "## Model\n",
@@ -116,18 +116,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3aed15ef",
+   "id": "db27e08c",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
-    "Model = namedtuple('Model', ('n', 'w_vals', 'P', 'β', 'c', 'θ'))"
+    "Model = namedtuple('Model', ('n', 'w_vals', 'P', 'β', 'c'))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "6715e6dc",
+   "id": "12fc1076",
    "metadata": {},
    "source": [
     "The function below holds default values and populates the namedtuple."
@@ -136,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a71e53b6",
+   "id": "38adc913",
    "metadata": {
     "hide-output": false
    },
@@ -147,19 +147,18 @@
     "        ρ=0.9,       # wage persistence\n",
     "        ν=0.2,       # wage volatility\n",
     "        β=0.99,      # discount factor\n",
-    "        c=1.0,       # unemployment compensation\n",
-    "        θ=-0.1       # risk parameter\n",
+    "        c=1.0        # unemployment compensation\n",
     "    ):\n",
     "    \"Creates an instance of the job search model with Markov wages.\"\n",
     "    mc = qe.tauchen(n, ρ, ν)\n",
     "    w_vals, P = jnp.exp(mc.state_values), mc.P\n",
     "    P = jnp.array(P)\n",
-    "    return Model(n, w_vals, P, β, c, θ)"
+    "    return Model(n, w_vals, P, β, c)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "2b0c1ae0",
+   "id": "0d9cf896",
    "metadata": {},
    "source": [
     "Here’s the Bellman operator."
@@ -168,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "42cbc688",
+   "id": "57271468",
    "metadata": {
     "hide-output": false
    },
@@ -182,7 +181,7 @@
     "        e(w) = w / (1-β) and (Ev)(w) = E_w[ v(W')]\n",
     "\n",
     "    \"\"\"\n",
-    "    n, w_vals, P, β, c, θ = model\n",
+    "    n, w_vals, P, β, c = model\n",
     "    h = c + β * P @ v\n",
     "    e = w_vals / (1 - β)\n",
     "\n",
@@ -191,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0722b77e",
+   "id": "02f68661",
    "metadata": {},
    "source": [
     "The next function computes the optimal policy under the assumption that $ v $ is\n",
@@ -215,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c4923f4b",
+   "id": "5e9403be",
    "metadata": {
     "hide-output": false
    },
@@ -224,7 +223,7 @@
     "@jax.jit\n",
     "def get_greedy(v, model):\n",
     "    \"\"\"Get a v-greedy policy.\"\"\"\n",
-    "    n, w_vals, P, β, c, θ = model\n",
+    "    n, w_vals, P, β, c = model\n",
     "    e = w_vals / (1 - β)\n",
     "    h = c + β * P @ v\n",
     "    σ = jnp.where(e >= h, 1, 0)\n",
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29827efc",
+   "id": "e9463c2b",
    "metadata": {},
    "source": [
     "Here’s a routine for value function iteration."
@@ -242,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c455f04e",
+   "id": "a2ed628e",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a4a0614",
+   "id": "ae82afbe",
    "metadata": {},
    "source": [
     "### Computing the solution\n",
@@ -280,14 +279,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "785879e5",
+   "id": "0b597d2b",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
     "model = create_js_model()\n",
-    "n, w_vals, P, β, c, θ = model\n",
+    "n, w_vals, P, β, c = model\n",
     "\n",
     "qe.tic()\n",
     "v_star, σ_star = vfi(model)\n",
@@ -296,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4aebcac7",
+   "id": "ebf44106",
    "metadata": {},
    "source": [
     "We compute the reservation wage as the first $ w $ such that $ \\sigma(w)=1 $."
@@ -305,7 +304,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "271c3e0b",
+   "id": "ea3880df",
    "metadata": {
     "hide-output": false
    },
@@ -317,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7f2bec3",
+   "id": "48cb0471",
    "metadata": {
     "hide-output": false
    },
@@ -333,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8dae24d",
+   "id": "c32833e1",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -341,7 +340,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffad3e7f",
+   "id": "91e2cb7f",
    "metadata": {},
    "source": [
     "## Exercise 9.1\n",
@@ -374,7 +373,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baf7975e",
+   "id": "59756e0b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 9.1](https://jax.quantecon.org/#job_search_1)"
@@ -383,12 +382,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "792576a5",
+   "id": "e854b0a7",
    "metadata": {
     "hide-output": false
    },
    "outputs": [],
    "source": [
+    "RiskModel = namedtuple('Model', ('n', 'w_vals', 'P', 'β', 'c', 'θ'))\n",
+    "\n",
     "def create_risk_sensitive_js_model(\n",
     "        n=500,       # wage grid size\n",
     "        ρ=0.9,       # wage persistence\n",
@@ -401,7 +402,7 @@
     "    mc = qe.tauchen(n, ρ, ν)\n",
     "    w_vals, P = jnp.exp(mc.state_values), mc.P\n",
     "    P = jnp.array(P)\n",
-    "    return Model(n, w_vals, P, β, c, θ)\n",
+    "    return RiskModel(n, w_vals, P, β, c, θ)\n",
     "\n",
     "\n",
     "@jax.jit\n",
@@ -463,7 +464,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7985763",
+   "id": "320f27c1",
    "metadata": {
     "hide-output": false
    },
@@ -475,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b06512d",
+   "id": "6068c773",
    "metadata": {
     "hide-output": false
    },
@@ -493,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c42d328",
+   "id": "694bcd47",
    "metadata": {},
    "source": [
     "The figure shows that the reservation wage under risk sensitive preferences (RS $ \\bar w $) shifts down.\n",
@@ -504,7 +505,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141904.9537296,
+  "date": 1714699246.0975938,
   "filename": "job_search.md",
   "kernelspec": {
    "display_name": "Python",
