--- a/lucas_model.ipynb
+++ b/lucas_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b2ad58ff",
+   "id": "5c3a4827",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b1852bd9",
+   "id": "c1e82e9b",
    "metadata": {},
    "source": [
     "# Asset Pricing: The Lucas Asset Pricing Model"
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c33636a",
+   "id": "d43d3893",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bedf8a3f",
+   "id": "22be799a",
    "metadata": {},
    "source": [
     "## Contents\n",
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e494e66",
+   "id": "7870ca15",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
     "\n",
     "What is the correct price to pay for such a claim?\n",
     "\n",
-    "The asset pricing model of Lucas [[Luc78](https://jax.quantecon.org/zreferences.html#id184)] attempts to answer this\n",
+    "The asset pricing model of Lucas [[Lucas, 1978](https://jax.quantecon.org/zreferences.html#id184)] attempts to answer this\n",
     "question in an equilibrium setting with risk-averse agents.\n",
     "\n",
     "Lucas’ model provides a beautiful illustration of model building in general and\n",
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6dfafcaa",
+   "id": "38e93195",
    "metadata": {
     "hide-output": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b86a5820",
+   "id": "961e47fb",
    "metadata": {},
    "source": [
     "## The Lucas Model\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9e3dff6",
+   "id": "9546465e",
    "metadata": {},
    "source": [
     "### Basic Setup\n",
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2866279b",
+   "id": "310fc546",
    "metadata": {},
    "source": [
     "#### Assets\n",
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c329644c",
+   "id": "26f3c230",
    "metadata": {},
    "source": [
     "#### Consumers\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "046e36d7",
+   "id": "7b153013",
    "metadata": {},
    "source": [
     "### Pricing a Lucas Tree\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4218e29a",
+   "id": "f991206b",
    "metadata": {},
    "source": [
     "#### The Dynamic Program\n",
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "067bdd2b",
+   "id": "19a24db4",
    "metadata": {},
    "source": [
     "#### Next Steps\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b0284a2",
+   "id": "119b5c4a",
    "metadata": {},
    "source": [
     "#### Equilibrium Constraints\n",
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc46b9b4",
+   "id": "27b56b5e",
    "metadata": {},
    "source": [
     "#### The Equilibrium Price Function\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e0086a",
+   "id": "0e8d1eb7",
    "metadata": {},
    "source": [
     "### Solving the Model\n",
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6296a1ad",
+   "id": "27e92111",
    "metadata": {},
    "source": [
     "#### Setting up the Problem\n",
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d739905",
+   "id": "c23f9cd7",
    "metadata": {},
    "source": [
     "#### A Little Fixed Point Theory\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc5ed20f",
+   "id": "ea1f8c1d",
    "metadata": {},
    "source": [
     "## Computation\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54413dd5",
+   "id": "6a9cc6e5",
    "metadata": {},
    "source": [
     "### Numba Code\n",
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "78865275",
+   "id": "261794fb",
    "metadata": {
     "hide-output": false
    },
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a9b16dfc",
+   "id": "5b0bbe64",
    "metadata": {},
    "source": [
     "Here’s a Numba-jitted version of the Lucas operator"
@@ -580,7 +580,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "741ea0d9",
+   "id": "9d243a42",
    "metadata": {
     "hide-output": false
    },
@@ -607,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4af56209",
+   "id": "277718b0",
    "metadata": {},
    "source": [
     "To solve the model, we write a function that iterates using the Lucas operator\n",
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "83626bdc",
+   "id": "8c47392a",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e4092b8f",
+   "id": "c87de048",
    "metadata": {},
    "source": [
     "Let’s solve the model and plot the resulting price function"
@@ -655,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d1660ab",
+   "id": "de33a7a4",
    "metadata": {
     "hide-output": false
    },
@@ -679,7 +679,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cdd73ff",
+   "id": "9b77c003",
    "metadata": {
     "hide-output": false
    },
@@ -695,7 +695,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "384b10fd",
+   "id": "39c9671b",
    "metadata": {},
    "source": [
     "We see that the price is increasing, even if we remove all serial correlation\n",
@@ -708,7 +708,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c8d082d6",
+   "id": "36b56817",
    "metadata": {},
    "source": [
     "### JAX Code\n",
@@ -719,7 +719,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2b8820fa",
+   "id": "51df6cbc",
    "metadata": {
     "hide-output": false
    },
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac7e788",
+   "id": "d277a2f6",
    "metadata": {},
    "source": [
     "We’ll use the following function to simultaneously compute the expectation\n",
@@ -766,7 +766,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b833d13b",
+   "id": "7b5c63f3",
    "metadata": {
     "hide-output": false
    },
@@ -783,7 +783,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "df2d7df5",
+   "id": "9b8a9a78",
    "metadata": {},
    "source": [
     "Here’s the Lucas operator"
@@ -792,7 +792,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5831c2ef",
+   "id": "0a60411b",
    "metadata": {
     "hide-output": false
    },
@@ -812,7 +812,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f6172c6",
+   "id": "23a589f6",
    "metadata": {},
    "source": [
     "We’ll use successive approximation to compute the fixed point."
@@ -821,7 +821,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75a34c66",
+   "id": "4219fe6a",
    "metadata": {
     "hide-output": false
    },
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "31cfa0a0",
+   "id": "7134fdc2",
    "metadata": {},
    "source": [
     "Here’s a function that solves the model"
@@ -860,7 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c57e746",
+   "id": "4b4dadfe",
    "metadata": {
     "hide-output": false
    },
@@ -886,7 +886,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10f922c8",
+   "id": "95783de0",
    "metadata": {},
    "source": [
     "Now let’s solve the model again and compare timing"
@@ -895,7 +895,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "67fcc834",
+   "id": "0ead9a0c",
    "metadata": {
     "hide-output": false
    },
@@ -919,7 +919,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3015d241",
+   "id": "3ed75cf4",
    "metadata": {},
    "source": [
     "Let’s check the solutions are similar"
@@ -928,7 +928,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f857e182",
+   "id": "2eeae1b0",
    "metadata": {
     "hide-output": false
    },
@@ -944,7 +944,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a2ea8dda",
+   "id": "2ee6c566",
    "metadata": {},
    "source": [
     "## Exercises\n",
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8817a4e5",
+   "id": "c5a8fc91",
    "metadata": {},
    "source": [
     "## Exercise 7.1\n",
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "087d1d61",
+   "id": "4ee77100",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 7.1](https://jax.quantecon.org/#lucas_ex1)"
@@ -976,7 +976,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fc0033",
+   "id": "08afa758",
    "metadata": {
     "hide-output": false
    },
@@ -999,7 +999,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141905.0316982,
+  "date": 1714699246.2755754,
   "filename": "lucas_model.md",
   "kernelspec": {
    "display_name": "Python",
