--- a/inventory_dynamics.ipynb
+++ b/inventory_dynamics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "29179172",
+   "id": "e35aa982",
    "metadata": {},
    "source": [
     "# Inventory Dynamics"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ea219f6",
+   "id": "7d82676d",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b5ed835d",
+   "id": "48d2b226",
    "metadata": {},
    "source": [
     "## Overview\n",
@@ -59,7 +59,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e88aee70",
+   "id": "b1f0bc43",
    "metadata": {
     "hide-output": false
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "794a8472",
+   "id": "dd89c9b1",
    "metadata": {},
    "source": [
     "Here’s a description of our GPU:"
@@ -84,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "facc00de",
+   "id": "3a6927c0",
    "metadata": {
     "hide-output": false
    },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e5473dc",
+   "id": "d34116b1",
    "metadata": {},
    "source": [
     "## Sample paths\n",
@@ -133,7 +133,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "decfa231",
+   "id": "3b6ae605",
    "metadata": {
     "hide-output": false
    },
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "672f2e01",
+   "id": "d5ff29b2",
    "metadata": {},
    "source": [
     "## Cross-sectional distributions\n",
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9c27a89",
+   "id": "8d8b3260",
    "metadata": {
     "hide-output": false
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9d1fc293",
+   "id": "308cb95a",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -224,7 +224,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05cbb831",
+   "id": "07506734",
    "metadata": {
     "hide-output": false
    },
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e9476fa",
+   "id": "324678c0",
    "metadata": {},
    "source": [
     "We’ll use the following specification"
@@ -255,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6dfbbd6",
+   "id": "1abec122",
    "metadata": {
     "hide-output": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f82fad9e",
+   "id": "75eed7fb",
    "metadata": {},
    "source": [
     "Let’s look at the timing."
@@ -278,7 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76067356",
+   "id": "42124393",
    "metadata": {
     "hide-output": false
    },
@@ -291,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e77ade51",
+   "id": "e08a82b3",
    "metadata": {
     "hide-output": false
    },
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3506975",
+   "id": "5d1674e6",
    "metadata": {},
    "source": [
     "Here’s a histogram of inventory levels at time $ T $."
@@ -312,7 +312,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e523a03b",
+   "id": "e78b2c17",
    "metadata": {
     "hide-output": false
    },
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed9174ce",
+   "id": "9a3f2657",
    "metadata": {},
    "source": [
     "### Compiling the outer loop\n",
@@ -345,7 +345,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f7deb83",
+   "id": "c4fea362",
    "metadata": {
     "hide-output": false
    },
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3fbac2a",
+   "id": "dc43108c",
    "metadata": {},
    "source": [
     "Let’s see how fast this runs with compile time."
@@ -393,7 +393,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "279115e8",
+   "id": "cdfd43d0",
    "metadata": {
     "hide-output": false
    },
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc73a70d",
+   "id": "894e5eae",
    "metadata": {},
    "source": [
     "And let’s see how fast it runs without compile time."
@@ -414,7 +414,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "630fa9e8",
+   "id": "76f95a76",
    "metadata": {
     "hide-output": false
    },
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5a439bd",
+   "id": "bc34b295",
    "metadata": {},
    "source": [
     "Compared to the original version with a pure Python outer loop, we have\n",
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a964c90e",
+   "id": "b11977c1",
    "metadata": {},
    "source": [
     "### Further vectorization\n",
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "034ddbe6",
+   "id": "71e6c8bb",
    "metadata": {
     "hide-output": false
    },
@@ -481,7 +481,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6cae11b",
+   "id": "5258b89a",
    "metadata": {},
    "source": [
     "Let’s test it with compile time included."
@@ -490,7 +490,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59e53253",
+   "id": "6dccf72f",
    "metadata": {
     "hide-output": false
    },
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6d025e0",
+   "id": "34dd2caf",
    "metadata": {},
    "source": [
     "Let’s run again to eliminate compile time."
@@ -511,7 +511,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff73f04c",
+   "id": "dd30ae57",
    "metadata": {
     "hide-output": false
    },
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9947eea0",
+   "id": "1cefbd15",
    "metadata": {},
    "source": [
     "On one hand, this version is faster than the previous one, where random variables were\n",
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7492edbd",
+   "id": "d0a96c35",
    "metadata": {},
    "source": [
     "## Distribution dynamics\n",
@@ -553,7 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e601d70f",
+   "id": "73400e49",
    "metadata": {
     "hide-output": false
    },
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee166c02",
+   "id": "77bf69d1",
    "metadata": {},
    "source": [
     "Let’s test it"
@@ -590,7 +590,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22a3d847",
+   "id": "3764194e",
    "metadata": {
     "hide-output": false
    },
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "496d73e9",
+   "id": "9c74ff13",
    "metadata": {},
    "source": [
     "Let’s plot the output."
@@ -617,7 +617,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d9ccae8",
+   "id": "1a96c62e",
    "metadata": {
     "hide-output": false
    },
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b27b250",
+   "id": "b14fcab7",
    "metadata": {},
    "source": [
     "This model for inventory dynamics is asymptotically stationary, with a unique\n",
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa7ece17",
+   "id": "cffa84dc",
    "metadata": {},
    "source": [
     "## Restock frequency\n",
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2089c90a",
+   "id": "a0bdce3e",
    "metadata": {},
    "source": [
     "### For loop version\n",
@@ -688,7 +688,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14f5da62",
+   "id": "eb812819",
    "metadata": {
     "hide-output": false
    },
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "80982382",
+   "id": "81551bcd",
    "metadata": {
     "hide-output": false
    },
@@ -743,7 +743,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adfea6b7",
+   "id": "8f2b1630",
    "metadata": {},
    "source": [
     "### Exercise 4.1\n",
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a543f2ed",
+   "id": "2169cfb9",
    "metadata": {},
    "source": [
     "### Solution to[ Exercise 4.1](https://jax.quantecon.org/#inventory_dynamics_ex1)\n",
@@ -765,7 +765,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "969535f8",
+   "id": "b92bbb97",
    "metadata": {
     "hide-output": false
    },
@@ -809,7 +809,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "de23d01b",
+   "id": "112208af",
    "metadata": {},
    "source": [
     "Note the time the routine takes to run, as well as the output"
@@ -818,7 +818,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dfb28fe7",
+   "id": "c2785073",
    "metadata": {
     "hide-output": false
    },
@@ -832,7 +832,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141904.653948,
+  "date": 1714699245.9605095,
   "filename": "inventory_dynamics.md",
   "kernelspec": {
    "display_name": "Python",
