--- a/overborrowing.ipynb
+++ b/overborrowing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3ff0095a",
+   "id": "39926293",
    "metadata": {},
    "source": [
     "# Bianchi Overborrowing Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9cfd64f9",
+   "id": "591f59d6",
    "metadata": {},
    "source": [
     "# GPU\n",
@@ -21,7 +21,7 @@
     "\n",
     "To run this lecture on your own machine, you need to install [Google JAX](https://github.com/google/jax).\n",
     "\n",
-    "This lecture provides a JAX implementation of “Overborrowing and Systemic Externalities” [[Bia11](https://jax.quantecon.org/zreferences.html#id256)] by [Javier Bianchi](http://www.javierbianchi.com/).\n",
+    "This lecture provides a JAX implementation of “Overborrowing and Systemic Externalities” [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)] by [Javier Bianchi](http://www.javierbianchi.com/).\n",
     "\n",
     "In addition to what’s in Anaconda, this lecture will need the following libraries:"
    ]
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76466214",
+   "id": "dc05797e",
    "metadata": {
     "hide-output": false
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "605f45d7",
+   "id": "38874b13",
    "metadata": {},
    "source": [
     "We use the following imports."
@@ -49,7 +49,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "036a6f90",
+   "id": "6521412e",
    "metadata": {
     "hide-output": false
    },
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "627c5bdf",
+   "id": "bf9661d2",
    "metadata": {},
    "source": [
     "## Description of the model\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a6192ce2",
+   "id": "f2bfbdac",
    "metadata": {},
    "source": [
     "### Decentralized equilibrium\n",
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a24787b2",
+   "id": "b55d0edc",
    "metadata": {},
    "source": [
     "### Notation\n",
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45ab2912",
+   "id": "7009c784",
    "metadata": {},
    "source": [
     "### Constrained planner\n",
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af74e4e2",
+   "id": "c523d7b3",
    "metadata": {},
    "source": [
     "## Markov dynamics\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "263f0710",
+   "id": "2f22a613",
    "metadata": {
     "hide-output": false
    },
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ce6043a",
+   "id": "152268b1",
    "metadata": {},
    "source": [
     "We’ll store the data in $ \\Omega $ using its square root:"
@@ -302,7 +302,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f755a535",
+   "id": "15de35b6",
    "metadata": {
     "hide-output": false
    },
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "120687db",
+   "id": "e179fa41",
    "metadata": {},
    "source": [
     "Here’s a function to convert the VAR process to a Markov chain evolving on a\n",
@@ -326,7 +326,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6893f0f6",
+   "id": "2268afd9",
    "metadata": {
     "hide-output": false
    },
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4eb7be91",
+   "id": "19663152",
    "metadata": {},
    "source": [
     "Here’s code for sampling from the Markov chain."
@@ -376,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "df0201d0",
+   "id": "8c2a04da",
    "metadata": {
     "hide-output": false
    },
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c40c442d",
+   "id": "c78a526b",
    "metadata": {},
    "source": [
     "Here’s code for generating the original VAR process, which can be used for\n",
@@ -419,7 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3682ae94",
+   "id": "dc580522",
    "metadata": {
     "hide-output": false
    },
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60faf68d",
+   "id": "9b332e20",
    "metadata": {},
    "source": [
     "Let’s check some statistics for both the original and the discretized processes."
@@ -451,7 +451,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "73832b9f",
+   "id": "9c842e72",
    "metadata": {
     "hide-output": false
    },
@@ -466,7 +466,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "341fc012",
+   "id": "eb078e9d",
    "metadata": {
     "hide-output": false
    },
@@ -484,7 +484,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ea48c297",
+   "id": "4d9a025f",
    "metadata": {
     "hide-output": false
    },
@@ -497,7 +497,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ec7298c",
+   "id": "06289c48",
    "metadata": {
     "hide-output": false
    },
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b89da133",
+   "id": "ea9f316e",
    "metadata": {},
    "source": [
     "## Overborrowing Model\n",
@@ -540,7 +540,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e1279efa",
+   "id": "92958995",
    "metadata": {
     "hide-output": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c33be0",
+   "id": "67853cba",
    "metadata": {},
    "source": [
     "Here’s flow utility."
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7499f1f4",
+   "id": "3c658400",
    "metadata": {
     "hide-output": false
    },
@@ -616,7 +616,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9f6f3603",
+   "id": "82eb5c47",
    "metadata": {},
    "source": [
     "We need code to generate an initial guess of $ H $."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "389c4197",
+   "id": "e6f41105",
    "metadata": {
     "hide-output": false
    },
@@ -646,7 +646,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "07dd9fad",
+   "id": "beb3bfb2",
    "metadata": {
     "hide-output": false
    },
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "005ff297",
+   "id": "3e8c0343",
    "metadata": {},
    "source": [
     "We need to construct the Bellman operator for the household.\n",
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b009e9ca",
+   "id": "b677fae3",
    "metadata": {
     "hide-output": false
    },
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c741bb0",
+   "id": "ca3042eb",
    "metadata": {},
    "source": [
     "Let’s now vectorize and jit-compile this map."
@@ -718,7 +718,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4603fdc5",
+   "id": "e0aebdf6",
    "metadata": {
     "hide-output": false
    },
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "511ff5a8",
+   "id": "95798d39",
    "metadata": {},
    "source": [
     "Now we can set up the Bellman operator by maximizing over the choice variable\n",
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d81148ef",
+   "id": "f3e6c4ad",
    "metadata": {
     "hide-output": false
    },
@@ -777,7 +777,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66fde1bc",
+   "id": "762825de",
    "metadata": {
     "hide-output": false
    },
@@ -788,7 +788,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b1c5265",
+   "id": "654ace77",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -797,7 +797,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff5fa76",
+   "id": "e9d966f2",
    "metadata": {
     "hide-output": false
    },
@@ -826,7 +826,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "207da19c",
+   "id": "f6e564cc",
    "metadata": {
     "hide-output": false
    },
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b8d4252",
+   "id": "8f9fe061",
    "metadata": {},
    "source": [
     "Here’s some code for value function iteration (VFI)."
@@ -846,7 +846,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "846957e3",
+   "id": "708ee9d6",
    "metadata": {
     "hide-output": false
    },
@@ -879,7 +879,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1cae055",
+   "id": "1db97976",
    "metadata": {},
    "source": [
     "This is how we update our guess of $ H $, using the current policy $ b' $\n",
@@ -889,7 +889,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2e986d8e",
+   "id": "d48635a7",
    "metadata": {
     "hide-output": false
    },
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8aabe39",
+   "id": "015fa8b7",
    "metadata": {
     "hide-output": false
    },
@@ -933,7 +933,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0c601f4",
+   "id": "bef250b2",
    "metadata": {},
    "source": [
     "Now we can write code to compute an equilibrium law of motion $ H $."
@@ -942,7 +942,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76600ffe",
+   "id": "338b1ca0",
    "metadata": {
     "hide-output": false
    },
@@ -971,7 +971,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ec4847f4",
+   "id": "42a3f413",
    "metadata": {},
    "source": [
     "## Planner problem\n",
@@ -984,7 +984,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd82e4a",
+   "id": "55764310",
    "metadata": {
     "hide-output": false
    },
@@ -1021,7 +1021,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c926a88",
+   "id": "ec6f459c",
    "metadata": {
     "hide-output": false
    },
@@ -1040,7 +1040,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b2b5a569",
+   "id": "03c3efad",
    "metadata": {},
    "source": [
     "Now we construct the Bellman operator."
@@ -1049,7 +1049,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "825cfb2b",
+   "id": "f9e50e21",
    "metadata": {
     "hide-output": false
    },
@@ -1069,7 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49e50acf",
+   "id": "cc105cab",
    "metadata": {
     "hide-output": false
    },
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "317aec93",
+   "id": "eb7cc6eb",
    "metadata": {},
    "source": [
     "Here’s a function that computes a greedy policy (best response to $ v $)."
@@ -1089,7 +1089,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89490d9b",
+   "id": "f88c96e4",
    "metadata": {
     "hide-output": false
    },
@@ -1109,7 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94a47aa6",
+   "id": "2b697c26",
    "metadata": {
     "hide-output": false
    },
@@ -1120,7 +1120,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b726a974",
+   "id": "fd20c918",
    "metadata": {},
    "source": [
     "Computing the planner solution is straightforward value function iteration:"
@@ -1129,7 +1129,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd85f2d1",
+   "id": "97edeeae",
    "metadata": {
     "hide-output": false
    },
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "082226a5",
+   "id": "e47f0f12",
    "metadata": {},
    "source": [
     "## Numerical solution\n",
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87b9738d",
+   "id": "60c02612",
    "metadata": {},
    "source": [
     "### Generating solutions\n",
@@ -1174,7 +1174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "de1756b1",
+   "id": "3776a162",
    "metadata": {
     "hide-output": false
    },
@@ -1189,7 +1189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01d26922",
+   "id": "e693278f",
    "metadata": {
     "hide-output": false
    },
@@ -1206,7 +1206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3a9938e",
+   "id": "bcd73735",
    "metadata": {
     "hide-output": false
    },
@@ -1222,18 +1222,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c97fa05",
+   "id": "9e8c4d70",
    "metadata": {},
    "source": [
     "### Policy plots\n",
     "\n",
-    "We produce a policy plot that is similar to Figure 1 in [[Bia11](https://jax.quantecon.org/zreferences.html#id256)]."
+    "We produce a policy plot that is similar to Figure 1 in [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)]."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a614e3a4",
+   "id": "fdcb5340",
    "metadata": {
     "hide-output": false
    },
@@ -1256,7 +1256,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3da331f9",
+   "id": "15ea57aa",
    "metadata": {},
    "source": [
     "The match is not exact because we use a different estimate of the Markov\n",
@@ -1267,7 +1267,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "576de7c8",
+   "id": "e39d6027",
    "metadata": {},
    "source": [
     "## Exercise"
@@ -1275,7 +1275,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f468344",
+   "id": "eaa63b85",
    "metadata": {},
    "source": [
     "## Exercise 20.1\n",
@@ -1293,7 +1293,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a7dd89b2",
+   "id": "5b2749a6",
    "metadata": {
     "hide-output": false
    },
@@ -1319,7 +1319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52469f5c",
+   "id": "95e91d2f",
    "metadata": {},
    "source": [
     "Note that you will have to convert JAX arrays into NumPy arrays if you want to use this function.\n",
@@ -1331,14 +1331,14 @@
     "- produce a kernel density plot for each of these data sets  \n",
     "\n",
     "\n",
-    "If you are successful, your plot should look something like Fig 2 of [[Bia11](https://jax.quantecon.org/zreferences.html#id256)] — although not exactly the same, due to the alternative specification of the Markov process.\n",
+    "If you are successful, your plot should look something like Fig 2 of [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)] — although not exactly the same, due to the alternative specification of the Markov process.\n",
     "\n",
     "To generate a kernel density plot, we recommend that you use `kdeplot` from the package `seaborn`, which is included in Anaconda."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c16249b8",
+   "id": "00fa467b",
    "metadata": {},
    "source": [
     "## Solution to[ Exercise 20.1](https://jax.quantecon.org/#overborrow_1)"
@@ -1347,7 +1347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfc1a788",
+   "id": "43bd1acb",
    "metadata": {
     "hide-output": false
    },
@@ -1360,7 +1360,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68ce17da",
+   "id": "53dcf9f8",
    "metadata": {},
    "source": [
     "We convert JAX arrays to NumPy arrays in order to use Numba."
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9672a857",
+   "id": "4a1840eb",
    "metadata": {
     "hide-output": false
    },
@@ -1381,7 +1381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0387d0d2",
+   "id": "3c4671a0",
    "metadata": {},
    "source": [
     "Now let’s compute borrowing for the decentralized equilibrium and the planner."
@@ -1390,7 +1390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ad676c5",
+   "id": "e1b14c53",
    "metadata": {
     "hide-output": false
    },
@@ -1404,7 +1404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c74685a",
+   "id": "960ebea0",
    "metadata": {},
    "source": [
     "We suppress some annoying warnings produced by the current version of `seaborn`"
@@ -1413,7 +1413,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8474c3bf",
+   "id": "6040fb93",
    "metadata": {
     "hide-output": false
    },
@@ -1425,7 +1425,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca26edfa",
+   "id": "de73791d",
    "metadata": {},
    "source": [
     "Now let’s plot the distributions using a kernel density estimator."
@@ -1434,7 +1434,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ea014c0",
+   "id": "8f0b0510",
    "metadata": {
     "hide-output": false
    },
@@ -1452,10 +1452,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "861479fb",
+   "id": "a6bf8115",
    "metadata": {},
    "source": [
-    "This corresponds to Figure 2 in [[Bia11](https://jax.quantecon.org/zreferences.html#id256)].\n",
+    "This corresponds to Figure 2 in [[Bianchi, 2011](https://jax.quantecon.org/zreferences.html#id256)].\n",
     "\n",
     "Again, the match is not exact but it is qualitatively similar.\n",
     "\n",
@@ -1465,7 +1465,7 @@
   }
  ],
  "metadata": {
-  "date": 1713141905.353004,
+  "date": 1714699246.5890062,
   "filename": "overborrowing.md",
   "kernelspec": {
    "display_name": "Python",
